--- a/document.tex
+++ b/document.tex
@@ -1,46 +1,95 @@
 \documentclass{article}
+
+\usepackage[hmargin=1.25cm, vmargin=0.75cm]{geometry}
+\usepackage{paralist}
 \usepackage[english,printdayoff]{isodate}
+\usepackage{hyperref}
+\usepackage[T1]{fontenc}
+
 \begin{document}
-Andrey Rjeutski
 
-E-mail: filhit@gmail.com
+  Andrey Rjeutski
 
-Mobile: +375 29 6998477
+  \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
 
-Stackoverflow: http://stackoverflow.com/users/3506292/filhit
+  \begin{minipage}[t]{0.39\textwidth}
 
-ISsoft, (http://www.issoft.by/), Minsk
+    \section*{Education} 
+    \subsection*{Belarusian State University}
+    Faculty of Applied Math and Computer Science
+	
+    2007 - 2012 | Minsk, Belarus
+	
+	GPA: 3.92 / 4.0
 
-\daterange{2012-02-01}{2015-05-01}\
+    \section*{Links} 
+    LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
+    Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
 
-Развивали плагины для ворда, которые следят за качеством документов.
-Изучали требования, выпускали версии.
-Применили новый дизайн. Ввели систему тестирования, уменьшили время устранения дефектов.
-Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
-Применил новый дизайн, быстрый, и современно выглядит.
+    \section*{Skills}
+    \subsection*{Programming}
+    \subsubsection*{Major skills:}
+	\begin{inparaitem}
+      \item C\# 
+	  \item WPF
+	  \item ASP .NET MVC
+	  \item OpenXML
+	  \item Git
+	\end{inparaitem}
+	
+    \subsubsection*{Familiar:}
+	\begin{inparaitem}
+      \item ADO .NET 
+	  \item Linq to SQL
+	  \item Entity Framework
+	  \item MSSQL
+	  \item CruiseControl.Net
+	  \item SVN
+	  \item TFVC
+	  \item Perforce
+	  \item HTML/CSS
+	  \item JavaScript
+	  \item Java
+	  \item C++
+	  \item Delphi
+	\end{inparaitem}
 
-\daterange{2012-10-01}{2013-01-01}
+    \subsection*{Languages}
+    English: Professional proficiency\\
+    Russian: Native
 
-Hillcrest CAC is an interest calculation program.
-The purpose of this program is to maintain a database of investors and to calculate and track investor interest for all time certificates issued.
-Разработал алгоритм, чтобы вычислить отсутствующие данные при импорте из старой системы.
+  \end{minipage}
+  \begin{minipage}[t]{0.6\textwidth}
 
-\daterange{2012-01-01}{2012-10-01}\
+    \section*{Experience}
+    \subsection*{\href{http://www.issoft.by/}{ISsoft}}
+	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
+    \daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus
+    \begin{itemize}
+      \item Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
+      \item Применил новый дизайн, быстрый, и современно выглядит.
+    \end{itemize}
+	
+	\subsubsection*{Interest calculation program}
+    \daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus
+	\begin{itemize}
+      \item Разработал алгоритм, чтобы вычислить отсутствующие данные при импорте из старой системы.
+    \end{itemize}
 
-Сделали SaaS решение для мониторинга за бэкапами.
+	\subsubsection*{Online backups SaaS}
+	\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus
+    \begin{itemize}
+      \item Сделали SaaS решение для мониторинга за бэкапами.
+    \end{itemize}
+	
+    \subsection*{\href{http://www.itransition.com/}{Itransition} | Software Developer | Minsk, Belarus}
+	\subsubsection*{online reporting systems for internal corporate usage by top Market Players in Pharmaceuticals}
+    \daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus
+    \begin{itemize}
+      \item Развивали систему отчетов (BI). 
+      \item Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
+    \end{itemize}
 
-Itransition, (http://www.itransition.com/), Minsk
-
-\daterange{2010-11-01}{2011-12-01}\
-
-Working on a dedicated team building online reporting systems on ASP.NET MVC / MS SQL / OpenXML for internal corporate usage by top Market Players in Pharmaceuticals.
-Развивали систему отчетов (BI). 
-Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
-
-Belarusian State University (Faculty of Applied Math and Computer Science) 2007 - 2012
-
-Major skills in C\#, WPF, ASP .NET MVC, ADO .NET, Linq to SQL, Entity Framework, MSSQL, OpenXML, CruiseControl.Net, experience in SVN, Git, TFVC and Perforce usage. 
-Also possessing skills in HTML/CSS, JavaScript including jQuery, Java, C++ and Delphi programming, IIS and MSSQL administration.
-Upper Intermediate English. 
+  \end{minipage}
 
 \end{document}
