--- a/document.tex
+++ b/document.tex
@@ -5,14 +5,18 @@
 \usepackage[english,printdayoff]{isodate}
 \usepackage{hyperref}
 \usepackage[T1]{fontenc}
+\usepackage{graphicx}
 
 \begin{document}
 
-  Andrey Rjeutski
+  \includegraphics[height=45mm]{photo}
+  \begin{centering}
+    Andrey Rjeutsk
 
-  \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
+    \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
   
-  Occamstr. 21 80802 Muenchen Germany
+    Occamstr. 21 80802 Muenchen Germany
+  \end{centering}
 
   \begin{minipage}[t]{0.39\textwidth}
 
