Change city spelling

--- a/document.tex
+++ b/document.tex
@@ -15,7 +15,7 @@
 
     \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
   
-    Occamstr. 21 80802 Muenchen Germany
+    Occamstr. 21 80802 Munich Germany
   \end{centering}
 
   \begin{minipage}[t]{0.39\textwidth}
