--- a/document.tex
+++ b/document.tex
@@ -9,14 +9,19 @@
 
 \begin{document}
 
-  \includegraphics[height=45mm]{photo}
-  \begin{centering}
-    Andrey Rjeutsk
+  \begin{minipage}{0.3\textwidth}
+    \includegraphics[width=0.95\textwidth]{photo}
+  \end{minipage}
+  \begin{minipage}{0.69\textwidth}
+    \begin{centering}
+      Andrey Rjeutski
 
-    \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
-  
-    Occamstr. 21 80802 Munich Germany
-  \end{centering}
+      \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
+
+      Occamstr. 21 80802 Munich Germany
+	  
+	\end{centering}
+  \end{minipage}
 
   \begin{minipage}[t]{0.39\textwidth}
 
