translate hillcrest achievement

--- a/document.tex
+++ b/document.tex
@@ -82,7 +82,7 @@
 	\subsubsection*{Interest calculation program}
     \daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus
 	\begin{itemize}
-      \item Разработал алгоритм, чтобы вычислить отсутствующие данные при импорте из старой системы.
+      \item Designed an algorithm to calculate missing data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 
 	\subsubsection*{Online backups SaaS}
