add space under photo

--- a/document.tex
+++ b/document.tex
@@ -22,7 +22,9 @@
 	  
 	\end{centering}
   \end{minipage}
-
+  
+  \vspace{1cm}
+  
   \begin{minipage}[t]{0.39\textwidth}
 
     \section*{Education} 
