add support for russian text

--- a/document.tex
+++ b/document.tex
@@ -4,7 +4,10 @@
 \usepackage{paralist}
 \usepackage[english,printdayoff]{isodate}
 \usepackage{hyperref}
-\usepackage[T1]{fontenc}
+\usepackage{mathtext}
+\usepackage[T1,T2A]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[russian,english]{babel}
 \usepackage{graphicx}
 
 \begin{document}
@@ -76,10 +79,12 @@
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
     \daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus
-    \begin{itemize}
-      \item Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
-      \item Применил новый дизайн, быстрый, и современно выглядит.
-    \end{itemize}
+	\begin{otherlanguage}{russian}
+      \begin{itemize}
+        \item Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
+        \item Применил новый дизайн, быстрый, и современно выглядит.
+      \end{itemize}
+	\end{otherlanguage}
 	
 	\subsubsection*{Interest calculation program}
     \daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus
@@ -90,16 +95,18 @@
 	\subsubsection*{Online backups SaaS}
 	\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus
     \begin{itemize}
-      \item Сделали SaaS решение для мониторинга за бэкапами.
+      \foreignlanguage{russian}{\item Сделали SaaS решение для мониторинга за бэкапами.}
     \end{itemize}
 	
     \subsection*{\href{http://www.itransition.com/}{Itransition} | Software Developer | Minsk, Belarus}
 	\subsubsection*{online reporting systems for internal corporate usage by top Market Players in Pharmaceuticals}
     \daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus
-    \begin{itemize}
-      \item Развивали систему отчетов (BI). 
-      \item Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
-    \end{itemize}
+	\begin{otherlanguage}{russian}
+      \begin{itemize}
+        \item Развивали систему отчетов (BI). 
+        \item Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
+      \end{itemize}
+	\end{otherlanguage}
 
   \end{minipage}
 
