better name for itransition project

--- a/document.tex
+++ b/document.tex
@@ -99,7 +99,7 @@
     \end{itemize}
 	
     \subsection*{\href{http://www.itransition.com/}{Itransition} | Software Developer | Minsk, Belarus}
-	\subsubsection*{online reporting systems for internal corporate usage by top Market Players in Pharmaceuticals}
+	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus
 	\begin{otherlanguage}{russian}
       \begin{itemize}
