Add space between columns

--- a/document.tex
+++ b/document.tex
@@ -28,7 +28,7 @@
   
   \vspace{1cm}
   
-  \begin{minipage}[t]{0.39\textwidth}
+  \begin{minipage}[t]{0.34\textwidth}
 
     \section*{Education} 
     \subsection*{Belarusian State University}
@@ -73,7 +73,8 @@
     Russian: Native
 
   \end{minipage}
-  \begin{minipage}[t]{0.6\textwidth}
+  \hfil
+  \begin{minipage}[t]{0.55\textwidth}
 
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
