remove title and location from company line as it is already in employment period line

--- a/document.tex
+++ b/document.tex
@@ -99,7 +99,7 @@
       \foreignlanguage{russian}{\item Сделали SaaS решение для мониторинга за бэкапами.}
     \end{itemize}
 	
-    \subsection*{\href{http://www.itransition.com/}{Itransition} | Software Developer | Minsk, Belarus}
+    \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus
 	\begin{otherlanguage}{russian}
