--- a/document.tex
+++ b/document.tex
@@ -3,12 +3,12 @@
 \usepackage[hmargin=1.25cm, vmargin=0.75cm]{geometry}
 \usepackage{paralist}
 \usepackage[english,printdayoff]{isodate}
-\usepackage{hyperref}
 \usepackage{mathtext}
 \usepackage[T1,T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[russian,english]{babel}
 \usepackage{graphicx}
+\usepackage[pdftex,colorlinks=true,urlcolor=blue]{hyperref}
 
 \begin{document}
 
