Use bigger font for name

--- a/document.tex
+++ b/document.tex
@@ -17,7 +17,7 @@
   \end{minipage}
   \begin{minipage}{0.69\textwidth}
     \begin{centering}
-      Andrey Rjeutski
+      {\Huge Andrey Rjeutski}
 
       \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
 
