style  period and location

--- a/document.tex
+++ b/document.tex
@@ -10,6 +10,8 @@
 \usepackage{graphicx}
 \usepackage[pdftex,colorlinks=true,urlcolor=blue]{hyperref}
 
+\newcommand{\periodandlocation}[1]{{\small #1}}
+
 \begin{document}
 
   \begin{minipage}{0.3\textwidth}
@@ -34,7 +36,7 @@
     \subsection*{Belarusian State University}
     Faculty of Applied Math and Computer Science
 	
-    2007 - 2012 | Minsk, Belarus
+    \periodandlocation{2007 - 2012 | Minsk, Belarus}
 
     \section*{Links} 
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
@@ -79,7 +81,7 @@
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
-    \daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus
+    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus}
 	\begin{otherlanguage}{russian}
       \begin{itemize}
         \item Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
@@ -88,20 +90,20 @@
 	\end{otherlanguage}
 	
 	\subsubsection*{Interest calculation program}
-    \daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus
+    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
 	\begin{itemize}
       \item Designed an algorithm to calculate missing data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 
 	\subsubsection*{Online backups SaaS}
-	\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus
+	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
     \begin{itemize}
       \foreignlanguage{russian}{\item Сделали SaaS решение для мониторинга за бэкапами.}
     \end{itemize}
 	
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
-    \daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus
+    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus}
 	\begin{otherlanguage}{russian}
       \begin{itemize}
         \item Развивали систему отчетов (BI). 
