remove empty lines

--- a/document.tex
+++ b/document.tex
@@ -21,27 +21,21 @@
     \begin{centering}
       {\Huge Andrey Rjeutski}
 
-      \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255
-
+      \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255\\
       Occamstr. 21 80802 Munich Germany
 	  
 	\end{centering}
   \end{minipage}
   
   \vspace{1cm}
-  
   \begin{minipage}[t]{0.34\textwidth}
-
     \section*{Education} 
     \subsection*{Belarusian State University}
-    Faculty of Applied Math and Computer Science
-	
-    \periodandlocation{2007 - 2012 | Minsk, Belarus}
-
+    Faculty of Applied Math and Computer Science\\
+	\periodandlocation{2007 - 2012 | Minsk, Belarus}
     \section*{Links} 
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
     Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
-
     \section*{Skills}
     \subsection*{Programming}
     \subsubsection*{Major skills:}
@@ -52,7 +46,6 @@
 	  \item OpenXML
 	  \item Git
 	\end{inparaitem}
-	
     \subsubsection*{Familiar:}
 	\begin{inparaitem}
       \item ADO .NET 
@@ -69,15 +62,12 @@
 	  \item C++
 	  \item Delphi
 	\end{inparaitem}
-
     \subsection*{Languages}
     English: Professional proficiency\\
     Russian: Native
-
   \end{minipage}
   \hfil
   \begin{minipage}[t]{0.55\textwidth}
-
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
@@ -88,19 +78,16 @@
         \item Применил новый дизайн, быстрый, и современно выглядит.
       \end{itemize}
 	\end{otherlanguage}
-	
 	\subsubsection*{Interest calculation program}
     \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
 	\begin{itemize}
       \item Designed an algorithm to calculate missing data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
-
 	\subsubsection*{Online backups SaaS}
 	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
     \begin{itemize}
       \foreignlanguage{russian}{\item Сделали SaaS решение для мониторинга за бэкапами.}
     \end{itemize}
-	
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus}
@@ -110,7 +97,5 @@
         \item Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
       \end{itemize}
 	\end{otherlanguage}
-
   \end{minipage}
-
 \end{document}
