translate test harness achievement

--- a/document.tex
+++ b/document.tex
@@ -74,7 +74,7 @@
     \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus}
 	\begin{otherlanguage}{russian}
       \begin{itemize}
-        \item Разработал систему тестов, которая уменьшила время на стабилизацию перед релизом с шести до двух недель.
+        \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
         \item Применил новый дизайн, быстрый, и современно выглядит.
       \end{itemize}
 	\end{otherlanguage}
