translate new design achievement

--- a/document.tex
+++ b/document.tex
@@ -72,12 +72,10 @@
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
     \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus}
-	\begin{otherlanguage}{russian}
-      \begin{itemize}
-        \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
-        \item Применил новый дизайн, быстрый, и современно выглядит.
-      \end{itemize}
-	\end{otherlanguage}
+    \begin{itemize}
+      \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
+      \item Changed the application to be fast and modern looking. The new version got very positive reviews from the customers.
+    \end{itemize}
 	\subsubsection*{Interest calculation program}
     \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
 	\begin{itemize}
