make font bigger

--- a/document.tex
+++ b/document.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,11pt]{article}
 
 \usepackage[hmargin=1.25cm, vmargin=0.75cm]{geometry}
 \usepackage{paralist}
