better text for new algorithm achievent

--- a/document.tex
+++ b/document.tex
@@ -79,7 +79,7 @@
 	\subsubsection*{Interest calculation program}
     \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
 	\begin{itemize}
-      \item Designed an algorithm to calculate missing data exported from the old system. The old system was successfully replaced on time.
+      \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 	\subsubsection*{Online backups SaaS}
 	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
