make languages consistent to other skills

--- a/document.tex
+++ b/document.tex
@@ -62,7 +62,7 @@
 	  \item C++
 	  \item Delphi
 	\end{inparaitem}
-    \subsection*{Languages}
+    \subsubsection*{Languages:}
     English: Professional proficiency\\
     Russian: Native
   \end{minipage}
