translate saas bullet text

--- a/document.tex
+++ b/document.tex
@@ -84,7 +84,7 @@
 	\subsubsection*{Online backups SaaS}
 	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
     \begin{itemize}
-      \foreignlanguage{russian}{\item Сделали SaaS решение для мониторинга за бэкапами.}
+      \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
