translate itransition bullet text

--- a/document.tex
+++ b/document.tex
@@ -89,11 +89,8 @@
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus}
-	\begin{otherlanguage}{russian}
-      \begin{itemize}
-        \item Развивали систему отчетов (BI). 
-        \item Исследовали требования, применяли дизайн для новых клиентов, делали новые отчеты.
-      \end{itemize}
-	\end{otherlanguage}
+    \begin{itemize}
+      \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
+    \end{itemize}
   \end{minipage}
 \end{document}
