remove russian support as there is no russian text left

--- a/document.tex
+++ b/document.tex
@@ -4,9 +4,9 @@
 \usepackage{paralist}
 \usepackage[english,printdayoff]{isodate}
 \usepackage{mathtext}
-\usepackage[T1,T2A]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[russian,english]{babel}
+\usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage[pdftex,colorlinks=true,urlcolor=blue]{hyperref}
 
