--- a/document.tex
+++ b/document.tex
@@ -76,7 +76,7 @@
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
       \item Changed the application to be fast and modern looking. The new version got very positive reviews from the customers.
     \end{itemize}
-	\subsubsection*{Interest calculation program}
+	\subsubsection*{Desktop application for interest calculation}
     \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
 	\begin{itemize}
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
