change case in word add ins project name

--- a/document.tex
+++ b/document.tex
@@ -70,7 +70,7 @@
   \begin{minipage}[t]{0.55\textwidth}
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
-	\subsubsection*{Microsoft Word Add-ins for Legal and Life Sciences industries}
+	\subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
     \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus}
     \begin{itemize}
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
