--- a/document.tex
+++ b/document.tex
@@ -31,7 +31,7 @@
     \section*{Education} 
     \subsection*{Belarusian State University}
     Faculty of Applied Math and Computer Science\\
-	\periodandlocation{2007 - 2012 | Minsk, Belarus}
+	\periodandlocation{2007 to 2012 | Minsk, Belarus}
     \section*{Links} 
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
     Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
