reorder languages and programming skills

--- a/document.tex
+++ b/document.tex
@@ -36,6 +36,9 @@
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
     Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
     \section*{Skills}
+	\subsection*{Languages}
+    English: Professional proficiency\\
+    Russian: Native
     \subsection*{Programming}
     \subsubsection*{Major skills:}
 	\begin{inparaitem}
@@ -61,9 +64,6 @@
 	  \item C++
 	  \item Delphi
 	\end{inparaitem}
-    \subsubsection*{Languages:}
-    English: Professional proficiency\\
-    Russian: Native
   \end{minipage}
   \hfil
   \begin{minipage}[t]{0.55\textwidth}
