remove colons from programming skills subsubsections

--- a/document.tex
+++ b/document.tex
@@ -40,7 +40,7 @@
     English: Professional proficiency\\
     Russian: Native
     \subsection*{Programming}
-    \subsubsection*{Major skills:}
+    \subsubsection*{Major skills}
 	\begin{inparaitem}
       \item C\# 
 	  \item WPF
@@ -48,7 +48,7 @@
 	  \item OpenXML
 	  \item Git
 	\end{inparaitem}
-    \subsubsection*{Familiar:}
+    \subsubsection*{Familiar}
 	\begin{inparaitem}
       \item ADO .NET 
 	  \item Linq to SQL
