better name for backup SaaS project

--- a/document.tex
+++ b/document.tex
@@ -80,7 +80,7 @@
 	\begin{itemize}
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
-	\subsubsection*{Online backups SaaS}
+	\subsubsection*{SaaS solution for backup in the cloud}
 	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
     \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
