--- a/document.tex
+++ b/document.tex
@@ -10,6 +10,7 @@
 \usepackage[pdftex,colorlinks=true,urlcolor=blue]{hyperref}
 
 \newcommand{\periodandlocation}[1]{{\small #1}}
+\newcommand{\minsk}{Minsk, Belarus}
 
 \begin{document}
 
@@ -31,7 +32,7 @@
     \section*{Education} 
     \subsection*{Belarusian State University}
     Faculty of Applied Math and Computer Science\\
-	\periodandlocation{2007 to 2012 | Minsk, Belarus}
+	\periodandlocation{2007 to 2012 | \minsk}
     \section*{Links} 
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
     Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
@@ -70,24 +71,24 @@
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
-    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | Minsk, Belarus}
+    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | \minsk}
     \begin{itemize}
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
       \item Changed the application to be fast and modern looking. The new version got very positive reviews from the customers.
     \end{itemize}
 	\subsubsection*{Desktop application for interest calculation}
-    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | Minsk, Belarus}
+    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | \minsk}
 	\begin{itemize}
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 	\subsubsection*{SaaS solution for backup in the cloud}
-	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | Minsk, Belarus}
+	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | \minsk}
     \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
-    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | Minsk, Belarus}
+    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | \minsk}
     \begin{itemize}
       \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
     \end{itemize}
