extract Software Developer to a command

--- a/document.tex
+++ b/document.tex
@@ -11,6 +11,7 @@
 
 \newcommand{\periodandlocation}[1]{{\small #1}}
 \newcommand{\minsk}{Minsk, Belarus}
+\newcommand{\jobtitle}{Software Developer}
 
 \begin{document}
 
@@ -71,24 +72,24 @@
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
-    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | Software Developer | \minsk}
+    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | \jobtitle{} | \minsk}
     \begin{itemize}
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
       \item Changed the application to be fast and modern looking. The new version got very positive reviews from the customers.
     \end{itemize}
 	\subsubsection*{Desktop application for interest calculation}
-    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | Software Developer | \minsk}
+    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | \jobtitle{} | \minsk}
 	\begin{itemize}
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 	\subsubsection*{SaaS solution for backup in the cloud}
-	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | Software Developer | \minsk}
+	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | \jobtitle{} | \minsk}
     \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
-    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | Software Developer | \minsk}
+    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | \jobtitle{} | \minsk}
     \begin{itemize}
       \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
     \end{itemize}
