add github account as a link

--- a/document.tex
+++ b/document.tex
@@ -36,7 +36,8 @@
 	\periodandlocation{2007 to 2012 | \minsk}
     \section*{Links} 
     LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
-    Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}
+    Stackoverflow: \href{http://stackoverflow.com/users/3506292/filhit}{\bf filhit}\\
+	Github: \href{https://github.com/filhit}{\bf filhit}
     \section*{Skills}
 	\subsection*{Languages}
     English: Professional proficiency\\
