add commas to address

--- a/document.tex
+++ b/document.tex
@@ -23,7 +23,7 @@
       {\Huge Andrey Rjeutski}
 
       \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 157 57742255\\
-      Occamstr. 21 80802 Munich Germany
+      Occamstr. 21, 80802 Munich, Germany
 	  
 	\end{centering}
   \end{minipage}
