--- a/document.tex
+++ b/document.tex
@@ -14,6 +14,7 @@
 \newcommand{\jobtitle}{Software Developer}
 
 \begin{document}
+  \pagenumbering{gobble}
   \begin{minipage}{0.69\textwidth}
     \begin{centering}
       {\Huge Andrey Rjeutski}
