change languages section

--- a/document.tex
+++ b/document.tex
@@ -40,8 +40,8 @@
 	Github: \href{https://github.com/filhit}{\bf filhit}
     \section*{Skills}
 	\subsection*{Languages}
-    English: Professional proficiency\\
-    Russian: Native
+    Proficient in english\\
+    Native russian speaker
     \subsection*{Programming}
     \subsubsection*{Major skills}
 	\begin{inparaitem}
