change new design achievement

--- a/document.tex
+++ b/document.tex
@@ -76,7 +76,7 @@
     \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | \jobtitle{} | \minsk}
     \begin{itemize}
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
-      \item Changed the application to be fast and modern looking. The new version got very positive reviews from the customers.
+      \item Changed the application to be fast and modern looking. A survey has shown that the most of the customers liked the new look and feel.
     \end{itemize}
 	\subsubsection*{Desktop application for interest calculation}
     \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | \jobtitle{} | \minsk}
