--- a/document.tex
+++ b/document.tex
@@ -35,9 +35,9 @@
     Faculty of Applied Math and Computer Science\\
 	\periodandlocation{2007 to 2012 | \minsk}
     \section*{Links} 
-    LinkedIn: \href{https://linkedin.com/in/andrey-rjeutski-92064741}{\bf Andrey Rjeutski} \\
-    Stackoverflow: \href{https://stackoverflow.com/users/3506292/filhit}{\bf filhit}\\
-	Github: \href{https://github.com/filhit}{\bf filhit}
+    \href{https://linkedin.com/in/andrey-rjeutski-92064741}{https://linkedin.com/in/andrey-rjeutski-92064741}\\
+    \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}\\
+	\href{https://github.com/filhit}{https://github.com/filhit}
     \section*{Skills}
 	\subsection*{Languages}
     Proficient in english.\\
