prevent hyphenation in headings.

--- a/document.tex
+++ b/document.tex
@@ -7,7 +7,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{graphicx}
+\usepackage{sectsty}
 \usepackage[pdftex,colorlinks=true,urlcolor=blue]{hyperref}
+
+\allsectionsfont{\raggedright}
 
 \newcommand{\periodandlocation}[1]{{\small #1}}
 \newcommand{\minsk}{Minsk, Belarus}
@@ -28,7 +31,7 @@
     \includegraphics[width=0.95\textwidth]{photo}
   \end{minipage}
   
-  \vspace{1cm}
+  \vspace{0.5cm}
   \begin{minipage}[t]{0.34\textwidth}
     \section*{Education} 
     \subsection*{Belarusian State University}
