format job title and employment period

--- a/document.tex
+++ b/document.tex
@@ -12,9 +12,8 @@
 
 \allsectionsfont{\raggedright}
 
-\newcommand{\periodandlocation}[1]{{\small #1}}
-\newcommand{\minsk}{Minsk, Belarus}
-\newcommand{\jobtitle}{Software Developer}
+\newcommand{\periodinminsk}[1]{{\small #1 in Minsk, Belarus}}
+\newcommand{\jobattributes}[1]{\periodinminsk{#1}{\small \newline Software Developer}}
 
 \begin{document}
   \pagenumbering{gobble}
@@ -36,7 +35,7 @@
     \section*{Education} 
     \subsection*{Belarusian State University}
     Faculty of Applied Math and Computer Science\\
-	\periodandlocation{2007 to 2012 | \minsk}
+	\periodinminsk{2007 to 2012}
     \section*{Links} 
     \href{https://linkedin.com/in/andrey-rjeutski-92064741}{https://linkedin.com/in/andrey-rjeutski-92064741}\\
     \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}\\
@@ -76,24 +75,24 @@
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
 	\subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
-    \periodandlocation{\daterange{2013-02-01}{2015-05-01}\ | \jobtitle{} | \minsk}
+    \jobattributes{\daterange{2013-02-01}{2015-05-01}}
     \begin{itemize}
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
       \item Changed the application to be fast and modern looking. A survey has shown that the most of the customers liked the new look and feel.
     \end{itemize}
 	\subsubsection*{Desktop application for interest calculation}
-    \periodandlocation{\daterange{2012-10-01}{2013-01-01}\ | \jobtitle{} | \minsk}
+    \jobattributes{\daterange{2012-10-01}{2013-01-01}}
 	\begin{itemize}
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
     \end{itemize}
 	\subsubsection*{SaaS solution for backup in the cloud}
-	\periodandlocation{\daterange{2012-01-01}{2012-10-01}\ | \jobtitle{} | \minsk}
+	\jobattributes{\daterange{2012-01-01}{2012-10-01}}
     \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
 	\subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
-    \periodandlocation{\daterange{2010-11-01}{2011-12-01}\ | \jobtitle{} | \minsk}
+    \jobattributes{\daterange{2010-11-01}{2011-12-01}}
     \begin{itemize}
       \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
     \end{itemize}
