smaller font size for date periods and titles

--- a/document.tex
+++ b/document.tex
@@ -12,8 +12,8 @@
 
 \allsectionsfont{\raggedright}
 
-\newcommand{\periodinminsk}[1]{{\small #1 in Minsk, Belarus}}
-\newcommand{\jobattributes}[1]{\periodinminsk{#1}{\small \newline Software Developer}}
+\newcommand{\periodinminsk}[1]{{\footnotesize #1 in Minsk, Belarus}}
+\newcommand{\jobattributes}[1]{\periodinminsk{#1}{\footnotesize \newline Software Developer}}
 
 \begin{document}
   \pagenumbering{gobble}
