fix horizontal margins in the bottom

--- a/document.tex
+++ b/document.tex
@@ -70,7 +70,7 @@
       \item Delphi
     \end{inparaitem}
   \end{minipage}
-  \hfil
+  \hfill
   \begin{minipage}[t]{0.55\textwidth}
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
