--- a/document.tex
+++ b/document.tex
@@ -12,17 +12,17 @@
 
 \allsectionsfont{\raggedright}
 
-\newcommand{\periodinminsk}[1]{{\footnotesize #1 in Minsk, Belarus}}
+\newcommand{\periodinminsk}[1]{{\footnotesize #1 in Athkatla, Amn}}
 \newcommand{\jobattributes}[1]{\periodinminsk{#1}{\footnotesize \newline Software Developer}}
 
 \begin{document}
   \pagenumbering{gobble}
   \begin{minipage}{0.69\textwidth}
     \begin{centering}
-      {\Huge Andrey Rjeutski}
+      {\Huge Udokul Duskwalker}
 
-      \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 1575 7742255\\
-      Occamstr. 21, 80802 Munich, Germany
+      \href{mailto:udokulduskwalker@gmail.com}{udokulduskwalker@gmail.com} | +49 1575 1234567\\
+      Whateverstr. 1, 80123 Munich, Germany
       
     \end{centering}
   \end{minipage}
@@ -33,13 +33,13 @@
   \vspace{0.5cm}
   \begin{minipage}[t]{0.34\textwidth}
     \section*{Education} 
-    \subsection*{Belarusian State University}
+    \subsection*{Amnian State University}
     Faculty of Applied Math and Computer Science\\
     \periodinminsk{2007 to 2012}
     \section*{Links} 
-    \href{https://linkedin.com/in/andrey-rjeutski-92064741}{https://linkedin.com/in/andrey-rjeutski-92064741}\\
-    \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}\\
-    \href{https://github.com/filhit}{https://github.com/filhit}
+    \href{https://linkedin.com/in/udokulduskwalker}{https://linkedin.com/in/\allowbreak udokulduskwalker}\\
+    \href{https://stackoverflow.com/users/udokulduskwalker}{https://stackoverflow.com/\allowbreak users/udokulduskwalker}\\
+    \href{https://github.com/udokulduskwalker}{https://github.com/\allowbreak udokulduskwalker}
     \section*{Skills}
     \subsection*{Languages}
     Proficient in english.\\
@@ -73,7 +73,7 @@
   \hfill
   \begin{minipage}[t]{0.55\textwidth}
     \section*{Experience}
-    \subsection*{\href{http://www.issoft.by/}{ISsoft}}
+    \subsection*{\href{http://www.whatevercompany.com/}{Whatever company}}
     \subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
     \jobattributes{\daterange{2013-02-01}{2015-05-01}}
     \begin{itemize}
@@ -90,7 +90,7 @@
     \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
-    \subsection*{\href{http://www.itransition.com/}{Itransition}}
+    \subsection*{\href{http://www.doesntmatterinc.com/}{Doesn't matter Inc.}}
     \subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \jobattributes{\daterange{2010-11-01}{2011-12-01}}
     \begin{itemize}
