#1 Add date and place of birth

--- a/document.tex
+++ b/document.tex
@@ -12,7 +12,8 @@
 
 \allsectionsfont{\raggedright}
 
-\newcommand{\periodinminsk}[1]{{\footnotesize #1 in Minsk, Belarus}}
+\newcommand{\minsk}{Minsk, Belarus}
+\newcommand{\periodinminsk}[1]{{\footnotesize #1 in \minsk}}
 \newcommand{\jobattributes}[1]{\periodinminsk{#1}{\footnotesize \newline Software Developer}}
 
 \begin{document}
@@ -21,6 +22,7 @@
     \begin{centering}
       {\Huge Andrey Rjeutski}
 
+      Born 08.04.1989 in \minsk\\
       \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 1575 7742255\\
       Occamstr. 21, 80802 Munich, Germany
       
