Move email to a command

--- a/document.tex
+++ b/document.tex
@@ -12,6 +12,7 @@
 
 \allsectionsfont{\raggedright}
 
+\newcommand{\myemail}{filhit@gmail.com}
 \newcommand{\minsk}{Minsk, Belarus}
 \newcommand{\periodinminsk}[1]{{\footnotesize #1 in \minsk}}
 \newcommand{\jobattributes}[1]{\periodinminsk{#1}{\footnotesize \newline Software Developer}}
@@ -23,7 +24,7 @@
       {\Huge Andrey Rjeutski}
 
       Born 08.04.1989 in \minsk\\
-      \href{mailto:filhit@gmail.com}{filhit@gmail.com} | +49 1575 7742255\\
+      \href{mailto:\myemail}{\myemail} | +49 1575 7742255\\
       Occamstr. 21, 80802 Munich, Germany
       
     \end{centering}
