#4 Remove link to github as there is nothing to show there :disappointed:

--- a/document.tex
+++ b/document.tex
@@ -41,8 +41,7 @@
     \periodinminsk{2007 to 2012}
     \section*{Links} 
     \href{https://linkedin.com/in/andrey-rjeutski-92064741}{https://linkedin.com/in/andrey-rjeutski-92064741}\\
-    \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}\\
-    \href{https://github.com/filhit}{https://github.com/filhit}
+    \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}
     \section*{Skills}
     \subsection*{Languages}
     Proficient in english.\\
