#2 Change date format for birth date

--- a/document.tex
+++ b/document.tex
@@ -23,7 +23,7 @@
     \begin{centering}
       {\Huge Andrey Rjeutski}
 
-      Born 08.04.1989 in \minsk\\
+      Born 1989-04-08 in \minsk\\
       \href{mailto:\myemail}{\myemail} | +49 1575 7742255\\
       Occamstr. 21, 80802 Munich, Germany
       
