--- a/document.tex
+++ b/document.tex
@@ -25,7 +25,8 @@
 
       Born 1989-04-08 in \minsk\\
       \href{mailto:\myemail}{\myemail} | +49 1575 7742255\\
-      Occamstr. 21, 80802 Munich, Germany
+      Occamstraße 21\\ 
+      80802 Munich
       
     \end{centering}
   \end{minipage}
