--- a/document.tex
+++ b/document.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 
-\usepackage[hmargin=2.5cm, vmargin=2cm]{geometry}
+\usepackage[hmargin={2.5cm,2.0cm}, vmargin={2.7cm,2cm}]{geometry}
 \usepackage{paralist}
 \usepackage[english,printdayoff]{isodate}
 \usepackage[T1]{fontenc}
