--- a/document.tex
+++ b/document.tex
@@ -12,7 +12,7 @@
 
 \allsectionsfont{\raggedright}
 
-\newcommand{\myemail}{andrey@rjeutski.com}
+\newcommand{\myemail}{andrey.rjeutski@outlook.com}
 \newcommand{\minsk}{Minsk, Belarus}
 \newcommand{\periodinminsk}[1]{{\footnotesize #1 in \minsk}}
 \newcommand{\jobattributes}[1]{\periodinminsk{#1}{\footnotesize \newline Software Developer}}
