Show email on a separate line

--- a/document.tex
+++ b/document.tex
@@ -24,7 +24,8 @@
       {\Huge Andrey Rjeutski}
 
       Born 1989-04-08 in \minsk\\
-      \href{mailto:\myemail}{\myemail} | +49 1575 7742255\\
+      \href{mailto:\myemail}{\myemail}\\
+      +49 1575 7742255\\
       Occamstraße 21\\ 
       80802 Munich
       
