Languages should be capitalized

--- a/document.tex
+++ b/document.tex
@@ -46,8 +46,8 @@
     \href{https://stackoverflow.com/users/3506292/filhit}{https://stackoverflow.com/\allowbreak users/3506292/filhit}
     \section*{Skills}
     \subsection*{Languages}
-    Proficient in english.\\
-    Native russian speaker.
+    Proficient in English.\\
+    Native Russian speaker.
     \subsection*{Programming}
     \subsubsection*{Major skills}
     \begin{inparaitem}
