Show projects as bullets

--- a/document.tex
+++ b/document.tex
@@ -78,27 +78,19 @@
   \begin{minipage}[t]{0.55\textwidth}
     \section*{Experience}
     \subsection*{\href{http://www.issoft.by/}{ISsoft}}
-    \subsubsection*{Microsoft Word add-ins for legal and life sciences industries}
-    \jobattributes{\daterange{2013-02-01}{2015-05-01}}
+    \jobattributes{\daterange{2012-01-01}{2015-05-01}}
     \begin{itemize}
+      \item Coded Microsoft Word add-ins for legal and life sciences industries.
       \item Implemented the test harness. Time to stabilize a release was reduced from six to two weeks.
       \item Changed the application to be fast and modern looking. A survey has shown that the most of the customers liked the new look and feel.
-    \end{itemize}
-    \subsubsection*{Desktop application for interest calculation}
-    \jobattributes{\daterange{2012-10-01}{2013-01-01}}
-    \begin{itemize}
+      \item Built a desktop application for interest calculation.
       \item Designed an algorithm to calculate values that were missing in the data exported from the old system. The old system was successfully replaced on time.
-    \end{itemize}
-    \subsubsection*{SaaS solution for backup in the cloud}
-    \jobattributes{\daterange{2012-01-01}{2012-10-01}}
-    \begin{itemize}
       \item Developed a SaaS solution to manage and monitor backups online.
     \end{itemize}
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
-    \subsubsection*{Online reporting systems for internal corporate usage by pharmaceuticals companies}
     \jobattributes{\daterange{2010-11-01}{2011-12-01}}
     \begin{itemize}
-      \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
+      \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents. It was programmed for internal corporate usage by pharmaceuticals companies.
     \end{itemize}
   \end{minipage}
 \end{document}
