Remove users of the application from Itransition bullets

--- a/document.tex
+++ b/document.tex
@@ -90,7 +90,7 @@
     \subsection*{\href{http://www.itransition.com/}{Itransition}}
     \jobattributes{\daterange{2010-11-01}{2011-12-01}}
     \begin{itemize}
-      \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents. It was programmed for internal corporate usage by pharmaceuticals companies.
+      \item Created a system to present data in charts and tables. Reports were available online and as PDF, PowerPoint and Excel documents.
     \end{itemize}
   \end{minipage}
 \end{document}
